--- a/templates/PetInfo.html
+++ b/templates/PetInfo.html
@@ -2,6 +2,13 @@
 {% extends "layouts/base.html" %}
 {% block head %}
 <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="/static/assets/scss/Test2.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cutive Mono">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Robot Condensed">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+    </head>
+    </head>
 <style>
     table, th, td {
         border: 1px solid white;
