--- a/templates/PetQuiz.html
+++ b/templates/PetQuiz.html
@@ -5,6 +5,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Quiz</title>
+    <link rel="stylesheet" type="text/css" href="/static/assets/scss/Test2.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cutive Mono">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Robot Condensed">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <style>
         p.solid {border-style: solid;}
         p.outline {outline-style: solid;}
