--- a/templates/PetQuiz2.html
+++ b/templates/PetQuiz2.html
@@ -2,6 +2,12 @@
 {% extends "layouts/base.html" %}
 
 {% block body %}
+    <head>
+        <link rel="stylesheet" type="text/css" href="/static/assets/scss/Test2.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cutive Mono">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Robot Condensed">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+    </head>
     <h1 class="center-block" style=" text-align:center; font-family: rono,serif;"">Pet Quiz 2</h1>
     <h2 style="padding-left: 25px"> Another Pet Quiz!!! </h2>
     <h3 style="padding-left:25px; font-size: 15px">Click the Answers Below and then press submit. Feel fry to try until you get everything right!</h3>
