--- a/templates/costcalculator.html
+++ b/templates/costcalculator.html
@@ -9,9 +9,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Calculator</title>
   <link rel="stylesheet" href="css/main.css">
+
 </head>
 <body>
-<h1 style="text-align:center; font-family:Times New Roman">Calculator</h1>
+<h1 style="text-align:center; font-family:Times New Roman; color:white">Calculator</h1>
 <div class="calculator-grid">
   <div class="output">
     <div data-previous-operand class="previous-operand"></div>
