--- a/templates/dogs.html
+++ b/templates/dogs.html
@@ -4,6 +4,11 @@
     <html lang="en">
     <head>
         <title>Dog Adoption Informtion</title>
+        <link rel="stylesheet" type="text/css" href="/static/assets/scss/Test2.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cutive Mono">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Robot Condensed">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+    </head>
     </head>
 {% endblock %}
 {% block body %}
