--- a/templates/hangman.html
+++ b/templates/hangman.html
@@ -5,7 +5,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Hangman</title>
-
+    <link rel="stylesheet" type="text/css" href="/static/assets/scss/Test2.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cutive Mono">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Robot Condensed">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <script>
         function dark() {
             var element = document.getElementById('navbarNavAltMarkup');
