--- a/templates/todo.html
+++ b/templates/todo.html
@@ -6,6 +6,10 @@
 <head>
     <meta charset="UTF-8">
     <title>To Do List When Having a Pet</title>
+    <link rel="stylesheet" type="text/css" href="/static/assets/scss/Test2.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cutive Mono">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Robot Condensed">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <style>
