--- a/templates/H2C4P.html
+++ b/templates/H2C4P.html
@@ -7,6 +7,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="/static/assets/scss/Test2.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cutive Mono">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Robot Condensed">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
         <style>
             .fakeimg {
