--- a/templates/cat.html
+++ b/templates/cat.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% extends "layouts/base.html" %}
+
 {% block head %}
     <html lang="en">
     <head>
@@ -7,7 +8,13 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="/static/assets/scss/Test2.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cutive Mono">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Robot Condensed">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+        </head>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
+
         <style>
             .fakeimg {
                 height: 200px;
