--- a/templates/pethistory.html
+++ b/templates/pethistory.html
@@ -10,6 +10,10 @@
     <title>Pet History Page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="/static/assets/scss/Test2.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cutive Mono">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Robot Condensed">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <style>
         * {
             box-sizing: border-box;
