creat task nathan and reem

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -14,7 +14,7 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/">Home</a>
             </li>
-            <a class="nav-link" href="/mainabout">About Us</a>
+            <a class="nav-link" href="/ap/mainabout">About Us</a>
             <li class="nav-item dropdown">
 
             <li class="nav-item dropdown">
@@ -49,6 +49,7 @@
                     <a class="dropdown-item" href="/currency">Currency Conversion</a>
                     <a class="dropdown-item" href="/Tdb-2">Tbd-2</a>
                 </div>
+            </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" id="dropdownMenuButton2" type="button" aria-expanded="false">
                     Activities
@@ -57,9 +58,17 @@
                     <a class="dropdown-item" href="/games">Games</a>
                     <a class="dropdown-item" href="/quiz">Quizzes</a>
                     <a class="dropdown-item" href="/world_instruments">World Instruments!</a>
-
                 </div>
-                    </li>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" id="dropdownMenuButton2" type="button" aria-expanded="false">
+                    Creat Task
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
+                    <a class="dropdown-item" href="/NathanReem">Nathan + Reem</a>
+                    <a class="dropdown-item" href="/quiz">Jacob + James + Daniel</a>
+                </div>
+            </li>
                 <a class="nav-link" href="/feedback">Give Us Feedback!</a>
                  </li>
              <a class="nav-link" href="/ratingtest">Rating</a>
