--- a/templates/mainabout.html
+++ b/templates/mainabout.html
@@ -16,27 +16,27 @@
             transform: translateY(3px);
         }
         .nathan{
-            background: url('../static/assets/nathan.png') no-repeat;
+            background: url('/static/assets/nathan.png') no-repeat;
             width: 232px;
             height: 309px;
         }
         .reem{
-            background: url('../static/assets/aboutMeReem.jpg') no-repeat;
+            background: url('/static/assets/aboutMeReem.jpg') no-repeat;
             width: 232px;
             height: 309px;
         }
         .daniel{
-            background: url('../static/assets/daniel.png') no-repeat;
+            background: url('/static/assets/daniel.png') no-repeat;
             width: 232px;
             height: 309px;
         }
         .jacob{
-            background: url('../static/assets/jacob.png') no-repeat;
+            background: url('/static/assets/jacob.png') no-repeat;
             width: 232px;
             height: 309px;
         }
         .james{
-            background: url('../static/assets/james.png') no-repeat;
+            background: url('/static/assets/james.png') no-repeat;
             width: 232px;
             height: 309px;
         }
@@ -55,31 +55,31 @@
             <div class="row" style="margin: 4% 2%">
                 <div class="col-2 m-3">
                     <div class="content_img" style="margin:auto">
-                        <input type="button" class="fa aboutUsImage nathan" onclick="location.href = '/aboutnathan';">
+                        <input type="button" class="fa aboutUsImage nathan" onclick="location.href = '/ap/aboutnathan';">
                         <div style="color:black">Nathan Manangan</div>
                     </div>
                 </div>
                 <div class="col-2 m-3">
                     <div class="content_img" style="margin-left:2%">
-                        <input type="button" class="fa aboutUsImage reem" onclick="location.href = '/aboutreem';">
+                        <input type="button" class="fa aboutUsImage reem" onclick="location.href = '/ap/aboutreem';">
                         <div style="color:black">Reem Ben Ishai</div>
                     </div>
                 </div>
                 <div class="col-2 m-3">
                     <div class="content_img" style="margin-left:2%">
-                        <input type="button" class="fa aboutUsImage daniel" onclick="location.href = '/aboutdaniel';">
+                        <input type="button" class="fa aboutUsImage daniel" onclick="location.href = '/ap/aboutdaniel';">
                         <div style="color:black">Daniel Bertino</div>
                     </div>
                 </div>
                 <div class="col-2 m-3">
                     <div class="content_img" style="margin-left:2%">
-                        <input type="button" class="fa aboutUsImage jacob" onclick="location.href = '/aboutjacob';">
+                        <input type="button" class="fa aboutUsImage jacob" onclick="location.href = '/ap/aboutjacob';">
                         <div style="color:black">Jacob Rozenkrants</div>
                     </div>
                 </div>
                 <div class="col-2 m-3">
                     <div class="content_img" style="margin-left:2%">
-                        <input type="button" class="fa aboutUsImage james" onclick="location.href = '/aboutjames';">
+                        <input type="button" class="fa aboutUsImage james" onclick="location.href = '/ap/aboutjames';">
                         <div style="color:black">James Lee</div>
                     </div>
                 </div>
