Google Translate in Search bar

--- a/templates/tanay.html
+++ b/templates/tanay.html
@@ -18,7 +18,7 @@
                 document.getElementById("togglemask-btn").innerText = "Put mask on";
             } else{
                 maskon = true;
-                document.getElementById('place').src="/static/assets/maskedtanay.jpg";
+                docßument.getElementById('place').src="/static/assets/maskedtanay.jpg";
                 document.getElementById("togglemask-btn").innerText = "Take mask off";
             }
         }
