--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -71,6 +71,7 @@
                     <a class="dropdown-item" href="{{ url_for('bchase.h2') }}">How To Care For Abandoned Pets</a>
                     <a class="dropdown-item" href="{{ url_for('btanay.costcalculator') }}">Manage Finances</a>
                     <a class="dropdown-item" href="{{ url_for('btanay.todo') }}">To-Do List</a>
+                    <a class="dropdown-item" href="{{ url_for('btanay.stopwatch') }}">Stopwatch</a>
                 </div>
         </li>
             <li class="nav-item dropdown">
@@ -111,7 +112,16 @@
 </nav>
 
 
-
+<div id="google_translate_element"></div>
+<script type="text/javascript">
+    function googleTranslateElementInit() {
+        new google.translate.TranslateElement(
+            {pageLanguage: 'en'},
+            'google_translate_element'
+        );
+    }
+</script>
+<script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit%22%3E</script>
 
 
 
@@ -137,3 +147,4 @@
     setInterval(clock, 1000);
 
 </script>
+
