--- a/templates/games.html
+++ b/templates/games.html
@@ -57,11 +57,9 @@
         <div class="col-3" style="margin-top: 10px;margin-left: 5%">
             <a href="/graph" id="yum"><span>Graph</span></a>
         </div>
-
         <div class="col-3" style="margin-top: 10px;margin-left: 5%">
-            <a href="/snake" id="yum"><span>Snake</span></a>
+            <a href="/numberguess" id="yum"><span>Number Guess</span></a>
         </div>
-
     </div>
     </body>
 {% endblock %}
