Create task; html page, python files with program functions, & edited main.py

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -49,24 +49,23 @@
                     <a class="dropdown-item" href="/currency">Currency Conversion</a>
                     <a class="dropdown-item" href="/Tdb-2">Tbd-2</a>
                 </div>
+            </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" id="dropdownMenuButton2" type="button" aria-expanded="false">
                     Activities
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
-                    <a class="dropdown-item" href="/games">Games</a>
+                    <a class="dropdown-item" href="/Games">Games</a>
                     <a class="dropdown-item" href="/quiz">Quizzes</a>
-                    <a class="dropdown-item" href="/Tbd-1">Tbd-1</a>
+                    <a class="dropdown-item" href="/world_instruments">World Instruments!</a>
 
                 </div>
-                    </li>
-                <a class="nav-link" href="/feedback">Give Us Feedback!</a>
-                 </li>
-             <a class="nav-link" href="/ratingtest">Rating</a>
             </li>
-            <a class="nav-link" href="/faq">FAQ</a>
+               <a class="nav-link" href="/feedback">Give Us Feedback!</a>
+               <a class="nav-link" href="/ratingtest">Rating</a>
+               <a class="nav-link" href="/faq">FAQ</a>
+               <a class="nav-link" href="/danielcreate">Senior's Create Task</a>
         </ul>
-
     </div>
     <div class="float-right m-2">
         <div class="form-group">
