--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -64,7 +64,7 @@
                <a class="nav-link" href="/feedback">Give Us Feedback!</a>
                <a class="nav-link" href="/ratingtest">Rating</a>
                <a class="nav-link" href="/faq">FAQ</a>
-               <a class="nav-link" href="/danielcreate">Senior's Create Task</a>
+               <a class="nav-link" href="/seniortask">Senior's Create Task</a>
         </ul>
     </div>
     <div class="float-right m-2">
