--- a/templates/layouts/seniortask.html
+++ b/templates/layouts/seniortask.html
@@ -7,7 +7,7 @@
             <div class="row" style="padding-left:0%; padding-top:5%; justify-content: center">
                 <div class="col-12">
                     <h1>Senior's Create Task</h1>
-                    <form action="/danielcreate/" name="createTask" method="POST" >
+                    <form action="/seniortask/" name="createTask" method="POST" >
                         <div>
                             <h2>Game Rules:</h2>
                             <p>1. &nbsp;&nbsp; Think any number between 1 and 100, and press start</p>
