--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -62,10 +62,10 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" id="dropdownMenuButton2" type="button" aria-expanded="false">
-                    Creat Task
+                    Create Task
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
-                    <a class="dropdown-item" href="/NathanReem">Nathan + Reem</a>
+                    <a class="dropdown-item" href="/NR/nathanreem">Nathan + Reem</a>
                     <a class="dropdown-item" href="/quiz">Jacob + James + Daniel</a>
                 </div>
             </li>
