nathan and reem create task

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -66,7 +66,7 @@
                     Creat Task
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
-                    <a class="dropdown-item" href="/NathanReem">Nathan + Reem</a>
+                    <a class="dropdown-item" href="/NR/nathanreem">Nathan + Reem</a>
                     <a class="dropdown-item" href="/quiz">Jacob + James + Daniel</a>
                 </div>
             </li>
