Colin Create Task Final

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -83,6 +83,7 @@
                     <a class="dropdown-item" href="{{ url_for('bchase.Pquiz2') }}">Fun Quiz about Pets and Website</a>
                     <a class="dropdown-item" href="{{ url_for('btanay.hangman') }}">Hangman</a>
                     <a class="dropdown-item" href="{{ url_for('bconnor.petapi') }}">api pets</a>
+                    <a class="dropdown-item" href="{{ url_for('bchase.RPC') }}">Animal Rock Paper Scissors</a>
                     <a class="dropdown-item" href="{{ url_for('bcolin.noseQuiz2') }}" target="_blank">Animal Trivia</a>
                 </div>
             </li>
