--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -67,7 +67,8 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
                     <a class="dropdown-item" href="/NR/nathanreem">Nathan + Reem</a>
-                    <a class="dropdown-item" href="/quiz">Jacob + James + Daniel</a>
+                    <a class="dropdown-item" href="/numberguess">Jacob + James + Daniel</a>
+                    <a class="dropdown-item" href="/JR/jacob">Jacob</a>
                 </div>
             </li>
                 <a class="nav-link" href="/feedback">Give Us Feedback!</a>
