--- a/templates/layouts/seniortask.html
+++ b/templates/layouts/seniortask.html
@@ -10,7 +10,7 @@
                     <form action="/seniortask/" name="createTask" method="POST" >
                         <div>
                             <h2>Game Rules:</h2>
-                            <p>1. &nbsp;&nbsp; Think any number between 1 and 100, and press start</p>
+                            <p>1. &nbsp;&nbsp; Think any number between 1 and 100, and press play</p>
                             <p>2. &nbsp;&nbsp; The computer will try to guess that number</p>
                             <p>3. &nbsp;&nbsp; Following the computer guess, select one of the options: (correct=if computer guessed right; more=if the computer underestimated; less=if the computer overestimated)</p>
                             <p>4. &nbsp;&nbsp; If the computer can't correctly guess your number in 5 tries you win ! </p>
