fixed /ap/mainabout in navbar and various fixes in main.py

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -14,7 +14,7 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/">Home</a>
             </li>
-            <a class="nav-link" href="/ap/mainabout">About Us</a>
+            <a class="nav-link" href="/mainabout">About Us</a>
             <li class="nav-item dropdown">
 
             <li class="nav-item dropdown">
@@ -63,12 +63,13 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" id="dropdownMenuButton2" type="button" aria-expanded="false">
-                    Creat Task
+                    Create Task
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
                     <a class="dropdown-item" href="/NR/nathanreem">Nathan + Reem</a>
-                    <a class="dropdown-item" href="/numberguess">Jacob + James + Daniel</a>
+                    <a class="dropdown-item" href="/numberguess">Jacob + James</a>
                     <a class="dropdown-item" href="/JR/jacob">Jacob</a>
+                    <a class="nav-link" href="/seniortask"> Daniel's Create Task</a>
                 </div>
             </li>
                 <a class="nav-link" href="/feedback">Give Us Feedback!</a>
