--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -67,9 +67,9 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
                     <a class="dropdown-item" href="/NR/nathanreem">Nathan + Reem</a>
-                    <a class="dropdown-item" href="/numberguess">Jacob + James</a>
+                    <a class="dropdown-item" href="/numberguess">James</a>
                     <a class="dropdown-item" href="/JR/jacob">Jacob</a>
-                    <a class="nav-link" href="/seniortask"> Daniel's Create Task</a>
+                    <a class="nav-link" href="/seniortask"> Daniel's Game</a>
                 </div>
             </li>
                 <a class="nav-link" href="/feedback">Give Us Feedback!</a>
