--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -67,7 +67,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
                     <a class="dropdown-item" href="/NR/nathanreem">Nathan + Reem</a>
-                    <a class="dropdown-item" href="/numberguess">James</a>
+                    <a class="dropdown-item" href="/JL/james">James</a>
                     <a class="dropdown-item" href="/JR/jacob">Jacob</a>
                     <a class="nav-link" href="/seniortask"> Daniel's Game</a>
                 </div>
