Jacob's PBL Feature

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -56,7 +56,7 @@
                     Activities
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
-                    <a class="dropdown-item" href="/games">Games</a>
+                    <a class="nav-link" href="/JG/jacobgame"> Game</a>
                     <a class="dropdown-item" href="/quiz">Quizzes</a>
                     <a class="dropdown-item" href="/world_instruments">World Instruments!</a>
                 </div>
@@ -67,7 +67,6 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
                     <a class="dropdown-item" href="/NR/nathanreem">Nathan + Reem</a>
-                    <a class="dropdown-item" href="/numberguess">Jacob + James</a>
                     <a class="dropdown-item" href="/JR/jacob">Jacob</a>
                     <a class="nav-link" href="/seniortask"> Daniel's Create Task</a>
                 </div>
