--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -56,7 +56,7 @@
                     Activities
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
-                    <a class="dropdown-item" href="/games">Games</a>
+                    <a class="dropdown-item" href="/JG/jacobgame">Games</a>
                     <a class="dropdown-item" href="/quiz">Quizzes</a>
                     <a class="dropdown-item" href="/world_instruments">World Instruments!</a>
                 </div>
