--- a/templates/kangaroos.html
+++ b/templates/kangaroos.html
@@ -10,8 +10,8 @@
 
 <!-- Setting up a block replacement to customize background to RINGS -->
 {% block background %}
-    <script src="{{ url_for('static', filename='three.r119.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vanta.halo.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/three.r119.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/vanta.halo.min.js') }}"></script>
     <script>
         VANTA.HALO({
             el: "body",
