--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -147,8 +147,8 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 </body>
 
 {% block background %}
-    <script src="{{ url_for('static', filename='three.r119.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vanta.birds.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/three.r119.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/vanta.birds.min.js') }}"></script>
     <script>
         VANTA.BIRDS({
             el: "body",
