--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,64 @@
-<!-- Extending the project layout, as this file will do minor customizations -->
 {% extends "layouts/base.html" %}
+{% set project = "Flask / Python" %}
 
-<!-- Setting up variables to customize "project" details to be specific to index page -->
-{% set project = "Portfolio" %}
-{% set overview = "https://nighthawkcodingsociety.com/projectsearch/details/Flask%20Portfolio%20Starter" %}
-{% set repo = "https://github.com/nighthawkcoders/flask_portfolio/" %}
+{% block body %}
+    <!-- Start of body content specific to page -->
+    <div class="px-5 py-5 mx-auto">
+        <h1 class="text-white"><strong>Python Home Page</strong></h1>
+        <div class="row">
+            <div class="col-4">
+                <div class="card">
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/python.jpeg') }}" alt="Python Development" height="250">
+                    <div class="card-body">
+                    <h5 class="card-title">What should Python Developers learn?</h5>
+                    <p class="card-text">
+                        <ol>
+                            <li>Python 3.8+ is used for PBL. Deployment availability on Linux Unbuntu should dictate version selected for project.</li>
+                            <li>GitHub.  Learning to master managing change, branches, pull requests, and more.</li>
+                            <li>Development DevOps. Python programmers should have a passion for managing the environment and learning automation (Git, Python Packages, Docker).</li>
+                            <li>API and Microservice using Flask.  Mastering creating and consuming RESTful APIs</li>
+                        </ol>
+                    </p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card">
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/flask.png') }}" alt="Flask Development" height="250">
+                    <div class="card-body">
+                    <h5 class="card-title">What is Flask? How do I start Web development?</h5>
+                    <p class="card-text">
+                        <ol>
+                            <li>Flask Framework is the popular Web Application development framework of Python.</li>
+                            <li>Blueprint is utility to help abstract complexity, moving information in independent files and directories.</li>
+                            <li>HTML using Bootstrap is a great way to build interesting pages and reduce CSS</li>
+                            <li>Jinja2 is a server-side Python like template engine, supports HTML5 web development, and provides full integration with Flask.</li>
+                            <li>
+                        </ol>
+                    </p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card">
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/pythondb.png') }}" alt="Backend and Persistence" height="250">
+                    <div class="card-body">
+                    <h5 class="card-title">How do you create Persistent data?</h5>
+                    <p class="card-text">
+                        <ol>
+                            <li>A Database is a structured set of data that is held on a computer (persistent).  Programming languages and frameworks allow you to store and retrive data.</li>
+                            <li>SQL stands for Structured Query Language · SQL lets you access and manipulate databases and has become a development standard.</li>
+                            <li>SQLAlchemy is the Python SQL toolkit and Object Relational Mapper that gives application developers the full power and flexibility of SQL.</li>
+                            <li>There are many newer and sometimes easier Database languages and frameworks.  Mongo, DynamoDB, Neo4J are Databases used by students in last 3 years.</li>
+                        </ol>
+                    </p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+{% endblock %}
