--- a/templates/projects/hawkers.html
+++ b/templates/projects/hawkers.html
@@ -10,8 +10,8 @@
 
 <!-- Setting up a block replacement to customize background to BIRDS -->
 {% block background %}
-    <script src="{{ url_for('static', filename='three.r119.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vanta.net.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/three.r119.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/vanta.net.min.js') }}"></script>
     <script>
         VANTA.NET({
             el: "body",
