editing and highlighting

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
                 <div class="card">
                     <img class="card-img-top" src="{{ url_for('static', filename='assets/python.jpeg') }}" alt="Python Development" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">What should Python Developers learn?</h5>
+                    <h5 class="card-title">What should <mark>Python Developers learn</mark>?</h5>
                     <p class="card-text">
                         <ol>
                             <li>Python 3.8+ is used for PBL. Deployment availability on Linux Unbuntu should dictate version selected for project.</li>
@@ -27,7 +27,7 @@
                 <div class="card">
                     <img class="card-img-top" src="{{ url_for('static', filename='assets/flask.png') }}" alt="Flask Development" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">What is Flask? How do I start Web development?</h5>
+                    <h5 class="card-title">What is <mark>Flask</mark>? How do I start Web development?</h5>
                     <p class="card-text">
                         <ol>
                             <li>Flask Framework is the popular Web Application development framework of Python.</li>
@@ -44,13 +44,13 @@
                 <div class="card">
                     <img class="card-img-top" src="{{ url_for('static', filename='assets/pythondb.png') }}" alt="Backend and Persistence" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">How do you create Persistent data?</h5>
+                    <h5 class="card-title">How do you manage <mark>Persistent data</mark> with Python?</h5>
                     <p class="card-text">
                         <ol>
-                            <li>A Database is a structured set of data that is held on a computer (persistent).  Programming languages and frameworks allow you to store and retrive data.</li>
-                            <li>SQL stands for Structured Query Language · SQL lets you access and manipulate databases and has become a development standard.</li>
-                            <li>SQLAlchemy is the Python SQL toolkit and Object Relational Mapper that gives application developers the full power and flexibility of SQL.</li>
-                            <li>There are many newer and sometimes easier Database languages and frameworks.  Mongo, DynamoDB, Neo4J are Databases used by students in last 3 years.</li>
+                            <li>A Database is an example of persistent data that is held on a computer.  Programming languages and frameworks allow you to store and retrive data.</li>
+                            <li>SQL stands for Structured Query Language · SQL lets you access and manipulate databases and has become a long lasting development standard.</li>
+                            <li>SQLAlchemy is the Python SQL toolkit and Object Relational Mapper (ORM) that gives application developers the full power and flexibility of SQL.</li>
+                            <li>There are many newer and sometimes easier Database languages and frameworks.  Mongo, DynamoDB, Neo4J are Databases being used by students developers in last 3 years.</li>
                         </ol>
                     </p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
