adding to learning

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,8 @@
                     <h5 class="card-title">What should <mark>Python Developers learn</mark>?</h5>
                     <p class="card-text">
                         <ol>
-                            <li>Python 3.8+ is used for PBL. Deployment availability on Linux Unbuntu should dictate version selected for project.</li>
+                            <li>Python 3.9 is used for most of our PBL.</li>
+                            <li>Visuals Studio Code (VS Code) is the primary editor, Interactive Development Environment (IDE).</li>
                             <li>GitHub.  Learning to master managing change, branches, pull requests, and more.</li>
                             <li>Development DevOps. Python programmers should have a passion for managing the environment and learning automation (Git, Python Packages, Docker).</li>
                             <li>API and Microservice using Flask.  Mastering creating and consuming RESTful APIs</li>
